[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]
[ext_resource path="res://Sprite.gd" type="Script" id=5]
[ext_resource path="res://crosshair.png" type="Texture" id=6]
[ext_resource path="res://Assets/blood.png" type="Texture" id=7]
[ext_resource path="res://Assets/font.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/9_mm_gunshot-mike-koenig-123.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/reload.wav" type="AudioStream" id=10]
[ext_resource path="res://Shotgun.tscn" type="PackedScene" id=11]
[ext_resource path="res://GunManager.gd" type="Script" id=12]

[sub_resource type="ParticlesMaterial" id=7]
spread = 2.54
gravity = Vector3( 0, -20, 0 )
initial_velocity = 52.35
angular_velocity = 81.13
linear_accel = 19.72

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.509804, 0.509804, 0.509804, 1 )

[sub_resource type="CapsuleMesh" id=9]
material = SubResource( 8 )
radius = 0.25

[sub_resource type="ParticlesMaterial" id=10]
spread = 140.1
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.94
angular_velocity = -142.73
angular_velocity_random = 0.51

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 1, 0.843137, 0, 1 )
emission_enabled = true
emission = Color( 1, 0.937255, 0, 1 )
emission_energy = 4.74
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=12]
material = SubResource( 11 )
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.75, 0.229, 0.75 )

[sub_resource type="CapsuleShape" id=2]
height = 2.04942

[sub_resource type="CapsuleShape" id=3]
radius = 1.32258
height = 2.19577

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
uniform float frequency = 10;
uniform float offset = 0.5;
uniform float amplitude = 0.2;
uniform float flashing = 0;
uniform float flash = 0.0;

void fragment(){
	float x = 0.001; 
	if(flash > 0.1){
		x = flash*0.01;
	}
	COLOR = vec4(texture(TEXTURE,UV).rgb,texture(TEXTURE,UV).a * (amplitude*sin(TIME*frequency)+offset)*flashing + (texture(TEXTURE,UV).a * x));
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/frequency = 10.0
shader_param/offset = 0.5
shader_param/amplitude = 0.2
shader_param/flashing = 0.0
shader_param/flash = 0.0

[sub_resource type="CapsuleMesh" id=6]
mid_height = 2.121

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.61328, 0 )
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.67038, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 3.13357, 0 )
current = true
near = 0.02

[node name="GunManager" type="Spatial" parent="Head/Camera"]
script = ExtResource( 12 )

[node name="RayCast" type="RayCast" parent="Head/Camera/GunManager"]
transform = Transform( -1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -200, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Gun" parent="Head/Camera/GunManager" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.448364, -0.202282, -0.769594 )

[node name="Hit" type="AudioStreamPlayer" parent="Head/Camera/GunManager/Gun"]
stream = ExtResource( 3 )

[node name="Shot" type="AudioStreamPlayer" parent="Head/Camera/GunManager/Gun"]
stream = ExtResource( 9 )
volume_db = -17.644

[node name="Reload" type="AudioStreamPlayer" parent="Head/Camera/GunManager/Gun"]
stream = ExtResource( 10 )
volume_db = -4.902

[node name="ShellParticles" type="Particles" parent="Head/Camera/GunManager/Gun"]
transform = Transform( -2.78664e-09, 1.11376e-11, 0.0637506, -0.000254798, 0.0637501, -2.22751e-11, -0.0637501, -0.000254798, -2.78658e-09, -0.119224, 0.0910806, -0.00171429 )
emitting = false
amount = 1
lifetime = 0.36
one_shot = true
speed_scale = 5.13
randomness = 0.54
visibility_aabb = AABB( -1.37112, -1.50116, -1.08811, 2.74224, 3.00231, 2.17623 )
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="MuzzleParticles" type="Particles" parent="Head/Camera/GunManager/Gun"]
transform = Transform( -0.0637506, 0, -5.57325e-09, 0, 0.0637506, 0, 5.57325e-09, 0, -0.0637506, -0.337739, 0.0910806, -0.00171429 )
emitting = false
amount = 204
lifetime = 0.15
one_shot = true
speed_scale = 1.86
explosiveness = 1.0
randomness = 0.54
visibility_aabb = AABB( -1.37112, -1.50116, -1.08811, 2.74224, 3.00231, 2.17623 )
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 12 )

[node name="Shotgun" parent="Head/Camera/GunManager" instance=ExtResource( 11 )]
transform = Transform( -1.36416e-08, 0, -0.312083, 0, 0.312083, 0, 0.312083, 0, -1.36416e-08, 0.448364, -0.182612, -0.769594 )

[node name="Hit" type="AudioStreamPlayer" parent="Head/Camera/GunManager/Shotgun"]
stream = ExtResource( 3 )

[node name="Shot" type="AudioStreamPlayer" parent="Head/Camera/GunManager/Shotgun"]
stream = ExtResource( 9 )
volume_db = -17.644

[node name="Reload" type="AudioStreamPlayer" parent="Head/Camera/GunManager/Shotgun"]
stream = ExtResource( 10 )
volume_db = -4.902

[node name="Timers" type="Node" parent="Head/Camera/GunManager"]

[node name="PistolTimer" type="Timer" parent="Head/Camera/GunManager/Timers"]
wait_time = 0.35
one_shot = true

[node name="PistolReloadTimer" type="Timer" parent="Head/Camera/GunManager/Timers"]
one_shot = true

[node name="ShotgunTimer" type="Timer" parent="Head/Camera/GunManager/Timers"]
wait_time = 0.35
one_shot = true

[node name="ShotgunReloadTimer" type="Timer" parent="Head/Camera/GunManager/Timers"]
one_shot = true

[node name="HitSoundDelay" type="Timer" parent="Head/Camera/GunManager/Timers"]
wait_time = 0.11
one_shot = true

[node name="DeathCamera" type="Camera" parent="Head"]
transform = Transform( -0.866025, 0.5, -7.57103e-08, 0.5, 0.866025, 4.37114e-08, 8.74228e-08, 0, -1, 0, 0.674407, 0 )

[node name="GroundCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1, -4.37114e-08, 0, 4.37114e-08, -1, 0, -2.13994, 0 )
shape = SubResource( 1 )

[node name="PhysicalCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0 )
shape = SubResource( 2 )

[node name="PlayerCollider" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PlayerCollider"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.00189114, -0.0605719, -0.000198103 )
shape = SubResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Data" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="HUD/Data"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HUD/Data"]
anchor_top = 1.0
anchor_right = 0.015
anchor_bottom = 1.0
margin_top = -76.0
margin_right = 103.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="Label" parent="HUD/Data"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -223.0
margin_top = -76.0
custom_fonts/font = ExtResource( 8 )
text = "20/100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD"]
position = Vector2( 971.769, 493.689 )
scale = Vector2( 0.0575937, 0.06 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = null
[connection signal="player_health_changed" from="." to="HUD" method="_on_Player_player_health_changed"]
[connection signal="player_just_damaged" from="." to="HUD" method="_on_Player_player_just_damaged"]
[connection signal="timeout" from="Head/Camera/GunManager/Timers/PistolTimer" to="Head/Camera/GunManager" method="_on_PistolTimer_timeout"]
[connection signal="timeout" from="Head/Camera/GunManager/Timers/PistolReloadTimer" to="Head/Camera/GunManager" method="_on_PistolReloadTimer_timeout"]
[connection signal="timeout" from="Head/Camera/GunManager/Timers/ShotgunTimer" to="Head/Camera/GunManager" method="_on_ShotgunTimer_timeout"]
[connection signal="timeout" from="Head/Camera/GunManager/Timers/ShotgunReloadTimer" to="Head/Camera/GunManager" method="_on_ShotgunReload_timeout"]
[connection signal="timeout" from="Head/Camera/GunManager/Timers/HitSoundDelay" to="Head/Camera/GunManager" method="_on_HitSoundDelay_timeout"]
